--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,37 +1,59 @@
-name: Format Code with Prettier
+# @format
 
-permissions:
-  contents: write
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
+name: Node.js CI
 
 on:
-  pull_request:
-    branches: [main]
   push:
-    branches: [main]
+    branches: ["main"]
 
 jobs:
-  format:
+  format-check:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          token: ${{ secrets.ACTION_TOKEN }}
           fetch-depth: 0
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: "20.x"
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install --no-package-lock
+          npm list --depth=0
 
-      - name: Run Prettier
-        run: npx prettier --write .
+      - name: Check formatting
+        run: npm run check
+        continue-on-error: true
 
-      - name: Commit formatted code
-        uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Run format
+        run: npm run format
+
+      - name: Get formatting changes
+        id: get-changes
+        run: |
+          git diff --name-only > formatted_files.txt
+          echo "CHANGES<<EOF" >> $GITHUB_OUTPUT
+          git diff >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Run format and save changes
+        run: |
+          npm run format
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .
+          git diff --cached --exit-code || git commit -m "Áp dụng định dạng tự động"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
-          commit_message: 'Áp dụng định dạng tự động'
-          branch: ${{ github.head_ref }}
+          github_token: ${{ secrets.ACTION_TOKEN }}
+          branch: ${{ github.head_ref || github.ref_name }}
